<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:text="@string/start_tracking"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/track" />

    <TextView
        android:text="@string/gps_inactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gps_active"
        android:layout_above="@+id/currSpeed" />

    <TextView
        android:text="@string/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currSpeed"
        android:layout_above="@+id/averageSpeed" />
    <TextView
        android:text="@string/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/averageSpeed"
        android:layout_above="@+id/overallTime" />

    <TextView
        android:text="@string/overall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overallTime"
        android:layout_above="@+id/track" />

    <com.example.brandon.defachelleclouetbrandon_2916832_ass3_journeytracker.GPSView
        custom:isActive="false"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/GPS"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/gps_active" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/GPS"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/GPS"
        android:layout_alignParentStart="true" />
</RelativeLayout>
